# TaskForge---High-Performance-Background-Job-Queue-System

./: .gitignore  API_DOCUMENTATION.md  API_ENDPOINTS_IMPLEMENTATION.md  API_KEY_MANAGEMENT.md  ARCHITECTURE_DESIGN.md  AUTHENTICATION_AUTHORIZATION.md  COMPLETION_SUMMARY.md  CONFIGURATION_MANAGEMENT.md  DASHBOARD_OBSERVABILITY.md  DATA_MODEL.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  JOB_DEPENDENCY_SYSTEM.md  JOB_EXECUTION_LIFECYCLE.md  JOB_SCHEDULING_SYSTEM.md  LOGGING_MONITORING_SYSTEM.md  METRICS_PROMETHEUS_SYSTEM.md  ORGANIZATION_PROJECT_MANAGEMENT.md  PAYMENT_METERING_SYSTEM.md  PRD.MD  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUEUE_JOB_MANAGEMENT.md  README.md  RETRY_BACKOFF_SYSTEM.md  SECURITY_ENCRYPTION_SYSTEM.md  SYSTEM_SUMMARY.md  TESTING_IMPLEMENTATION.md  TESTING_IMPLEMENTATION_GUIDE.md  TESTING_STRATEGY.md  WORKER_ASSIGNMENT_SYSTEM.md
taskforge/: Cargo.toml
taskforge/src/: config.rs  database.rs  lib.rs  main.rs  models.rs
taskforge/src/config/: logging_config.rs  mod.rs
taskforge/src/database/: mod.rs
taskforge/src/models/: api_key.rs  job.rs  job_dependency.rs  job_execution.rs  job_queue.rs  mod.rs  organization.rs  project.rs  user.rs  worker.rs
taskforge/src/services/: api_key_service.rs  authentication_service.rs  authorization_service.rs  execution_service.rs  job_service.rs  monitoring_service.rs  queue_service.rs  worker_service.rs
